--- a/main.mustache
+++ b/main.mustache
@@ -2,7 +2,7 @@
 
 <p>Welcome 👋</p>
 
-<p>I'm <b>{{name}}</b>, a Full Stack Developer from <img alt='Canadian flag' src='https://www.flaticon.com/svg/static/icons/svg/197/197430.svg' width='13'/> <b>Ontario, Canada</b>.</p>
+<p>I'm <b>Gulsah</b>, a Full Stack Developer from <img alt='Canadian flag' src='https://www.flaticon.com/svg/static/icons/svg/197/197430.svg' width='13'/> <b>Ontario, Canada</b>.</p>
 
 <h2>Programming Languages</h2>
 <p>
@@ -77,8 +77,19 @@
   <a href='mailto:sarsilmazgulsah@gmail.com' target='_blank'><img alt='Email' src='https://img.shields.io/badge/email-D14836.svg?&style=for-the-badge&logo=gmail&logoColor=white' /></a>
 </p>
 
+
+---
+<h2>Repo Details</h2>
+<div align="center">
+
+[![](https://raw.githubusercontent.com/gulsahsarsilmaz/gulsahsarsilmaz/master/profile-summary-card-output/nord_bright/0-profile-details.svg)](https://github.com/vn7n24fzkq/github-profile-summary-cards)
+
+[![](https://raw.githubusercontent.com/gulsahsarsilmaz/gulsahsarsilmaz/master/profile-summary-card-output/nord_bright/1-repos-per-language.svg)](https://github.com/vn7n24fzkq/github-profile-summary-cards) 
+[![](https://raw.githubusercontent.com/gulsahsarsilmaz/gulsahsarsilmaz/master/profile-summary-card-output/nord_bright/2-most-commit-language.svg)](https://github.com/vn7n24fzkq/github-profile-summary-cards)
+</div>
+
 ---
 
 <p align='center'>
-  This <i>README</i> file is generated <b>every 3 hours</b>!</br>Last refresh: {{refresh_date}}<br /><a href='https://medium.com/@th.guibert/how-to-create-a-self-updating-readme-md-for-your-github-profile-f8b05744ca91'>Create your own here!</a>
+  This <i>README</i> file is generated <b>every 3 hours</b>!</br>Last refresh: Wednesday, December 9, 1:32 PM EST<br /><a href='https://medium.com/@th.guibert/how-to-create-a-self-updating-readme-md-for-your-github-profile-f8b05744ca91'>Create your own here!</a>
 </p>
