--- a/main.mustache
+++ b/main.mustache
@@ -79,7 +79,7 @@
 
 
 ---
-<h2>Repo Details</h2>
+<h2>Repo Details 👨‍💻</h2>
 <div align="center">
 
 [![](https://raw.githubusercontent.com/gulsahsarsilmaz/gulsahsarsilmaz/master/profile-summary-card-output/nord_bright/0-profile-details.svg)](https://github.com/vn7n24fzkq/github-profile-summary-cards)
